--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,14 @@
 
     <!--Login Fragment-->
     <string name="login_text_title">Login</string>
+    <string name="login_text_description">Let’s log you in.</string>
+    <string name="login_title_email">Email Address</string>
+    <string name="login_hint_email">Enter your email address</string>
+    <string name="login_title_password">Password</string>
+    <string name="login_hint_password">Enter your password</string>
+    <string name="login_text_forgot_pw">Forgot Password?</string>
+    <string name="login_btn_login">Login</string>
+    <string name="login_text_register_title">Don’t have an account?</string>
+    <string name="login_text_register">Register</string>
 
 </resources>
