--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,17 @@
     <string name="login_text_register_title">Don’t have an account?</string>
     <string name="login_text_register">Register</string>
 
+    <!--Register Fragment-->
+    <string name="register_text_title">Register</string>
+    <string name="register_text_description">Enter your information below.</string>
+    <string name="register_title_email">Email Address</string>
+    <string name="register_hint_email">Enter your email address</string>
+    <string name="register_title_password">Password</string>
+    <string name="register_hint_password">Enter your password</string>
+    <string name="register_title_retype_password">Retype Password</string>
+    <string name="register_hint_retype_password">Re-enter your password</string>
+    <string name="register_btn_register">Register</string>
+    <string name="register_text_login_title">Already have and account?</string>
+    <string name="register_text_login">Login</string>
+
 </resources>
