Add Forgot Password Send Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,9 @@
 
     <!--Forgot Password Sent Fragment-->
     <string name="forgot_pw_sent_text_title">Check\nYour\nEmail</string>
+    <string name="forgot_pw_sent_text_description">Please check your inbox and click on the received link to reset your password.</string>
+    <string name="forgot_pw_sent_text_resend">Didn\'t receive the link?</string>
+    <string name="forgot_pw_sent_btn_resend">Resend</string>
+    <string name="forgot_pw_sent_text_resent">A new email has been sent.</string>
 
 </resources>
