--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="login_btn_login">Login</string>
     <string name="login_text_register_title">Don’t have an account?</string>
     <string name="login_btn_register">Register</string>
-    <string name="login_error_email">Please enter a valid email address!</string>
+    <string name="login_error_email">Email address is not valid!</string>
     <string name="login_error_credentials">The provided credentials are incorrect.</string>
 
     <!--Register Fragment-->
