--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,9 @@
     <string name="register_btn_register">Register</string>
     <string name="register_text_login_title">Already have and account?</string>
     <string name="register_btn_login">Login</string>
+    <string name="register_helper_password_weak">Weak</string>
+    <string name="register_helper_password_mediocre">Mediocre</string>
+    <string name="register_helper_password_strong">Strong</string>
     <string name="register_error_email">Email address is not valid!</string>
     <string name="register_error_password">Your password and retype password do not match!</string>
     <string name="register_error_account_exists">An account with the provided email already exists.</string>
