--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,8 @@
     <string name="warranties_list_status_soon">Soon</string>
     <string name="warranties_list_status_expired">Expired</string>
 
+    <!--Add Warranty Activity-->
+    <string name="add_warranty_text_title">Add Warranty</string>
+    <string name="add_warranty_menu_title_add">Add Warranty</string>
+
 </resources>
