--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,7 +93,7 @@
     <string name="warranties_list_status_soon">Soon</string>
     <string name="warranties_list_status_expired">Expired</string>
 
-    <!--Add Warranty Activity-->
+    <!--Add Warranty Fragment-->
     <string name="add_warranty_text_title">Add Warranty</string>
     <string name="add_warranty_menu_title_add">Add Warranty</string>
     <string name="add_warranty_title_title">Title</string>
