--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,26 @@
     <string name="warranty_details_status_soon">Warranty will expire soon</string>
     <string name="warranty_details_status_expired">Warranty is expired</string>
 
+    <!--Edit Warranty Fragment-->
+    <string name="edit_warranty_text_title">Edit Warranty</string>
+    <string name="edit_warranty_menu_title_edit">Edit Warranty</string>
+    <string name="edit_warranty_title_title">Title</string>
+    <string name="edit_warranty_hint_title">Enter the title</string>
+    <string name="edit_warranty_title_category">Category</string>
+    <string name="edit_warranty_hint_category">Select category</string>
+    <string name="edit_warranty_title_brand">Device Brand</string>
+    <string name="edit_warranty_hint_brand">Enter the device brand</string>
+    <string name="edit_warranty_title_model">Device Model</string>
+    <string name="edit_warranty_hint_model">Enter the device model</string>
+    <string name="edit_warranty_title_serial">Serial Number</string>
+    <string name="edit_warranty_hint_serial">Enter the serial number of the device</string>
+    <string name="edit_warranty_title_date_starting">Starting Date</string>
+    <string name="edit_warranty_title_date_expiry">Expiry Date</string>
+    <string name="edit_warranty_hint_date">dd/mm/yyyy</string>
+    <string name="edit_warranty_title_description">Description</string>
+    <string name="edit_warranty_hint_description">Enter description</string>
+    <string name="edit_warranty_title_date_picker_starting">Select Starting Date</string>
+    <string name="edit_warranty_title_date_picker_expiry">Select Expiry Date</string>
+    <string name="edit_warranty_error_date">Starting Date can\'t be after the Expiry Date!</string>
+
 </resources>
