--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,8 +80,8 @@
     <string name="forgot_pw_sent_text_resent">A new email has been sent.</string>
 
     <!--Main Activity-->
-    <string name="main_menu_title_warranties">Warranties</string>
-    <string name="main_menu_title_more">More</string>
+    <string name="main_menu_title_warranties">Warranty List</string>
+    <string name="main_menu_title_settings">Settings</string>
     <string name="main_text_content_description">Add Warranty</string>
 
     <!--Warranties Fragment-->
@@ -150,5 +150,23 @@
     <string name="edit_warranty_title_date_picker_starting">Select Starting Date</string>
     <string name="edit_warranty_title_date_picker_expiry">Select Expiry Date</string>
     <string name="edit_warranty_error_date">Starting Date can\'t be after the Expiry Date!</string>
+
+    <!--Settings Fragment-->
+    <string name="settings_text_title">Settings</string>
+    <string name="edit_warranty_title_account">Account</string>
+    <string name="edit_warranty_title_settings">Settings</string>
+    <string name="edit_warranty_btn_account_verify">Verify Email</string>
+    <string name="edit_warranty_btn_account_verified">Verified</string>
+    <string name="edit_warranty_text_account_change_email">Change Email</string>
+    <string name="edit_warranty_text_account_change_password">Change Password</string>
+    <string name="edit_warranty_text_settings_language">Language</string>
+    <string name="edit_warranty_text_settings_language_english">English</string>
+    <string name="edit_warranty_text_settings_language_persian">Persian</string>
+    <string name="edit_warranty_text_settings_theme">Theme</string>
+    <string name="edit_warranty_text_settings_theme_default">System Default</string>
+    <string name="edit_warranty_text_settings_theme_light">Light</string>
+    <string name="edit_warranty_text_settings_theme_dark">Dark</string>
+    <string name="edit_warranty_text_settings_privacy_policy">Privacy Policy</string>
+    <string name="edit_warranty_btn_logout">Logout</string>
 
 </resources>
