--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,4 +169,25 @@
     <string name="edit_warranty_text_settings_privacy_policy">Privacy Policy</string>
     <string name="edit_warranty_btn_logout">Logout</string>
 
+    <!--Change Password Fragment-->
+    <string name="change_password_text_title">Change Password</string>
+    <string name="change_password_title_current">Current Password</string>
+    <string name="change_password_hint_current">Enter your current password</string>
+    <string name="change_password_title_new">New Password</string>
+    <string name="change_password_hint_new">Enter a new password</string>
+    <string name="change_password_title_retype">Retype New Password</string>
+    <string name="change_password_hint_retype">Retype the new password</string>
+    <string name="change_password_btn_change">Change Password</string>
+    <string name="change_password_helper_password_weak">Weak</string>
+    <string name="change_password_helper_password_mediocre">Mediocre</string>
+    <string name="change_password_helper_password_strong">Strong</string>
+    <string name="change_password_error_password">New password and retype new password do not match!</string>
+
+    <!--Change Email Fragment-->
+    <string name="change_email_text_title">Change Email</string>
+    <string name="change_email_title_email">New Email Address</string>
+    <string name="change_email_hint_email">Enter a new email address</string>
+    <string name="change_email_btn_change">Change Email</string>
+    <string name="change_email_error_email">Email address is not valid!</string>
+
 </resources>
