--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,21 +153,21 @@
 
     <!--Settings Fragment-->
     <string name="settings_text_title">Settings</string>
-    <string name="edit_warranty_title_account">Account</string>
-    <string name="edit_warranty_title_settings">Settings</string>
-    <string name="edit_warranty_btn_account_verify">Verify Email</string>
-    <string name="edit_warranty_btn_account_verified">Verified</string>
-    <string name="edit_warranty_text_account_change_email">Change Email</string>
-    <string name="edit_warranty_text_account_change_password">Change Password</string>
-    <string name="edit_warranty_text_settings_language">Language</string>
-    <string name="edit_warranty_text_settings_language_english">English</string>
-    <string name="edit_warranty_text_settings_language_persian">Persian</string>
-    <string name="edit_warranty_text_settings_theme">Theme</string>
-    <string name="edit_warranty_text_settings_theme_default">System Default</string>
-    <string name="edit_warranty_text_settings_theme_light">Light</string>
-    <string name="edit_warranty_text_settings_theme_dark">Dark</string>
-    <string name="edit_warranty_text_settings_privacy_policy">Privacy Policy</string>
-    <string name="edit_warranty_btn_logout">Logout</string>
+    <string name="settings_title_account">Account</string>
+    <string name="settings_title_settings">Settings</string>
+    <string name="settings_btn_account_verify">Verify Email</string>
+    <string name="settings_btn_account_verified">Verified</string>
+    <string name="settings_text_account_change_email">Change Email</string>
+    <string name="settings_text_account_change_password">Change Password</string>
+    <string name="settings_text_settings_language">Language</string>
+    <string name="settings_text_settings_language_english">English</string>
+    <string name="settings_text_settings_language_persian">Persian</string>
+    <string name="settings_text_settings_theme">Theme</string>
+    <string name="settings_text_settings_theme_default">System Default</string>
+    <string name="settings_text_settings_theme_light">Light</string>
+    <string name="settings_text_settings_theme_dark">Dark</string>
+    <string name="settings_text_settings_privacy_policy">Privacy Policy</string>
+    <string name="settings_btn_logout">Logout</string>
 
     <!--Change Password Fragment-->
     <string name="change_password_text_title">Change Password</string>
