--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,6 +173,8 @@
     <string name="settings_text_settings_theme_dark">Dark</string>
     <string name="settings_text_settings_privacy_policy">Privacy Policy</string>
     <string name="settings_btn_logout">Logout</string>
+    <string name="settings_dialog_message">The verification email has been successfully sent to your inbox.</string>
+    <string name="settings_dialog_positive">Confirm</string>
 
     <!--Change Password Fragment-->
     <string name="change_password_text_title">Change Password</string>
