--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="category_tool">Tool</string>
     <string name="category_vehicle">Vehicle</string>
 
-    <!--Lading Activity-->
+    <!--Landing Activity-->
     <string name="landing_text_content_description">Header</string>
 
     <!--Login Fragment-->
@@ -92,6 +92,8 @@
     <string name="warranties_list_status_valid">Valid</string>
     <string name="warranties_list_status_soon">Soon</string>
     <string name="warranties_list_status_expired">Expired</string>
+    <string name="warranties_list_ad_logo_content_description">Ad Logo</string>
+    <string name="warranties_list_ad_indicator">Ad</string>
 
     <!--Add Warranty Fragment-->
     <string name="add_warranty_text_title">Add Warranty</string>
