--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,8 @@
     <string name="forgot_pw_hint_email">Enter your email address</string>
     <string name="forgot_pw_btn_send">Send Email</string>
     <string name="forgot_pw_btn_return">Return To Login</string>
+    <string name="forgot_pw_error_email">Email address is not valid!</string>
+    <string name="forgot_pw_error_not_found">The account with the provided email does not exist.</string>
 
     <!--Forgot Password Sent Fragment-->
     <string name="forgot_pw_sent_text_title">Check\nYour\nEmail</string>
@@ -78,6 +80,7 @@
     <string name="forgot_pw_sent_text_resend">Didn\'t receive the link?</string>
     <string name="forgot_pw_sent_btn_resend">Resend</string>
     <string name="forgot_pw_sent_text_resent">A new email has been sent.</string>
+    <string name="forgot_pw_sent_error_wait">Please wait a minute before requesting to resend the email.</string>
 
     <!--Main Activity-->
     <string name="main_menu_title_warranties">Warranty List</string>
