--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,9 +86,9 @@
     <string name="add_warranty_title_model">Device Model</string>
     <string name="add_warranty_hint_model">Enter the device model</string>
     <string name="add_warranty_title_serial">Serial Number</string>
+    <string name="add_warranty_hint_serial">Enter the serial number of the device</string>
     <string name="add_warranty_title_description">Description</string>
     <string name="add_warranty_hint_description">Enter description</string>
-    <string name="add_warranty_hint_serial">Enter the serial number of the device</string>
     <string name="add_warranty_title_date_starting">Starting Date</string>
     <string name="add_warranty_title_date_expiry">Expiry Date</string>
     <string name="add_warranty_hint_date">mm/dd/yyyy</string>
@@ -131,14 +131,15 @@
     <string name="edit_warranty_hint_model">Enter the device model</string>
     <string name="edit_warranty_title_serial">Serial Number</string>
     <string name="edit_warranty_hint_serial">Enter the serial number of the device</string>
+    <string name="edit_warranty_title_description">Description</string>
+    <string name="edit_warranty_hint_description">Enter description</string>
     <string name="edit_warranty_title_date_starting">Starting Date</string>
     <string name="edit_warranty_title_date_expiry">Expiry Date</string>
     <string name="edit_warranty_hint_date">mm/dd/yyyy</string>
-    <string name="edit_warranty_title_description">Description</string>
-    <string name="edit_warranty_hint_description">Enter description</string>
     <string name="edit_warranty_title_date_picker_starting">Select Starting Date</string>
     <string name="edit_warranty_title_date_picker_expiry">Select Expiry Date</string>
     <string name="edit_warranty_error_date">Starting Date can\'t be after the Expiry Date!</string>
+    <string name="edit_warranty_checkbox_lifetime">Lifetime Warranty</string>
 
     <!--Settings Fragment-->
     <string name="settings_text_title">Settings</string>
