Add Firebase Anti-Spam Device Restriction Error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">Warranty Roster</string>
+
+    <!--Errors-->
     <string name="network_error_connection">Unable to connect to the internet.</string>
     <string name="network_error_403">This service is not available in your region. Please consider changing your IP address by using a VPN.</string>
     <string name="network_error_failure">You\'re having network issues. Please try again later.</string>
     <string name="network_error_retry">Retry</string>
     <string name="intent_error_app_not_found">There is no app on the phone to handle this action.</string>
+    <string name="firebase_error_device_blocked">We have blocked all requests from this device due to unusual activity. Try again later.</string>
 
     <!--Login Fragment-->
     <string name="login_text_title">Login</string>
