--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -3,13 +3,13 @@
     <string name="app_name">وارانتی راستر</string>
 
     <!--Errors-->
-    <string name="error_network_connection">Unable to connect to the internet.</string>
-    <string name="error_network_failure">You\'re having network issues. Please try again later.</string>
-    <string name="error_firebase_403">This service is not available in your region. Please consider changing your IP address by using a VPN.</string>
-    <string name="error_firebase_device_blocked">We have blocked all requests from this device due to unusual activity. Try again later.</string>
-    <string name="error_intent_app_not_found">There is no app on the phone to handle this action.</string>
-    <string name="error_btn_retry">Retry</string>
-    <string name="error_btn_confirm">Confirm</string>
+    <string name="error_network_connection">اتصال به اینترنت امکان‌پذیر نیست.</string>
+    <string name="error_network_failure">مشکلی برای شبکه رخ داده است. لطفا بعدا دوباره امتحان کنید.</string>
+    <string name="error_firebase_403">این سرویس در منطقه شما در دسترس نیست. لطفاً از نرم‌افزار تغییر آدرس IP استفاده کنید.</string>
+    <string name="error_firebase_device_blocked">ما تمام درخواست‌های این دستگاه را به دلیل فعالیت غیر‌عادی مسدود کرده‌ایم. لطفا بعدا دوباره تلاش کنید.</string>
+    <string name="error_intent_app_not_found">هیچ برنامه‌ای برای انجام این دستور در گوشی وجود ندارد.</string>
+    <string name="error_btn_retry">تلاش مجدد</string>
+    <string name="error_btn_confirm">تایید</string>
 
     <!--Landing Activity-->
     <string name="landing_text_language">زبان</string>
@@ -18,59 +18,60 @@
 
     <!--Login Fragment-->
     <string name="login_text_title">ورود</string>
-    <string name="login_text_description">Let’s log you in.</string>
-    <string name="login_title_email">Email Address</string>
-    <string name="login_hint_email">Enter your email address</string>
-    <string name="login_title_password">Password</string>
-    <string name="login_hint_password">Enter your password</string>
-    <string name="login_btn_forgot_pw">Forgot Password?</string>
-    <string name="login_btn_login">Login</string>
-    <string name="login_text_register_title">Don’t have an account?</string>
-    <string name="login_btn_register">Register</string>
-    <string name="login_error_email">Email address is not valid!</string>
-    <string name="login_error_not_found">The account with the provided email does not exist.</string>
-    <string name="login_error_credentials">The provided credentials are incorrect.</string>
+    <string name="login_text_description">بیایید وارد برنامه شویم.</string>
+    <string name="login_title_email">آدرس ایمیل</string>
+    <string name="login_hint_email">آدرس ایمیل خود را وارد کنید</string>
+    <string name="login_title_password">رمز‌عبور</string>
+    <string name="login_hint_password">رمز‌عبور خود را وارد کنید</string>
+    <string name="login_btn_forgot_pw">رمز‌عبور‌تان را فراموش کرده‌اید؟</string>
+    <string name="login_btn_login">ورود</string>
+    <string name="login_text_register_title">حساب کاربری ندارید؟</string>
+    <string name="login_btn_register">ثبت‌نام کنید</string>
+    <string name="login_error_email">آدرس ایمیل وارد شده، معتبر نیست!</string>
+    <string name="login_error_not_found">حسابی با ایمیل وارد شده وجود ندارد.</string>
+    <string name="login_error_credentials">ایمیل و یا رمز‌عبور وارد شده نادرست است.</string>
 
     <!--Register Fragment-->
-    <string name="register_text_title">Register</string>
-    <string name="register_text_description">Enter your information below.</string>
-    <string name="register_text_agreement">By registering, you agree to our <font fgcolor="#1C53F4"><b>Privacy Policy</b></font>.</string>
-    <string name="register_title_email">Email Address</string>
-    <string name="register_hint_email">Enter your email address</string>
-    <string name="register_title_password">Password</string>
-    <string name="register_hint_password">Enter your password</string>
-    <string name="register_title_retype_password">Retype Password</string>
-    <string name="register_hint_retype_password">Re-enter your password</string>
-    <string name="register_btn_register">Register</string>
-    <string name="register_text_login_title">Already have and account?</string>
-    <string name="register_btn_login">Login</string>
-    <string name="register_helper_password_weak">Weak</string>
-    <string name="register_helper_password_mediocre">Mediocre</string>
-    <string name="register_helper_password_strong">Strong</string>
-    <string name="register_error_email">Email address is not valid!</string>
-    <string name="register_error_password_short">Password should be at least 6 characters!</string>
-    <string name="register_error_password">Your password and retype password do not match!</string>
-    <string name="register_error_account_exists">An account with the provided email already exists.</string>
+    <string name="register_text_title">ثبت‌نام</string>
+    <string name="register_text_description">اطلاعات خود را وارد کنید.</string>
+    <string name="register_text_agreement">با ثبت‌نام، شما <font fgcolor="#1C53F4"><b>سیاست حریم خصوصی</b></font> ما را می‌پذیرید.</string>
+    <string name="register_title_email">آدرس ایمیل</string>
+    <string name="register_hint_email">آدرس ایمیل خود را وارد کنید</string>
+    <string name="register_title_password">رمز‌عبور</string>
+    <string name="register_hint_password">رمز‌عبور را وارد کنید</string>
+    <string name="register_title_retype_password">تکرار رمز‌عبور</string>
+    <string name="register_hint_retype_password">رمز‌عبور را دوباره وارد کنید</string>
+    <string name="register_btn_register">ثبت‌نام</string>
+    <string name="register_text_login_title">در حال حاضر حساب کاربری دارید؟</string>
+    <string name="register_btn_login">وارد شوید</string>
+    <string name="register_helper_password_weak">ضعیف</string>
+    <string name="register_helper_password_mediocre">متوسط</string>
+    <string name="register_helper_password_strong">قوی</string>
+    <string name="register_error_email">آدرس ایمیل وارد شده، معتبر نیست!</string>
+    <string name="register_error_password_short">رمز‌عبور باید حداقل 6 کاراکتر باشد!</string>
+    <string name="register_error_password">رمز‌عبور و تکرار رمز‌عبور وارد شده با هم مطابقت ندارند!</string>
+    <string name="register_error_account_exists">حسابی با ایمیل وارد شده از قبل وجود دارد.</string>
 
     <!--Forgot Password Fragment-->
-    <string name="forgot_pw_text_title">Forgot\nYour\nPassword?</string>
-    <string name="forgot_pw_text_description">Enter your verified email to receive password reset instructions.</string>
-    <string name="forgot_pw_title_email">Email Address</string>
-    <string name="forgot_pw_hint_email">Enter your email address</string>
-    <string name="forgot_pw_btn_send">Send Email</string>
-    <string name="forgot_pw_btn_return">Return To Login</string>
-    <string name="forgot_pw_error_timer_is_not_zero_one">Please wait for %1$d second before requesting again…</string>
-    <string name="forgot_pw_error_timer_is_not_zero_other">Please wait for %1$d seconds before requesting again…</string>
-    <string name="forgot_pw_error_email">Email address is not valid!</string>
-    <string name="forgot_pw_error_not_found">The account with the provided email does not exist.</string>
+    <string name="forgot_pw_text_title">بازیابی\nرمز‌عبور</string>
+    <string name="forgot_pw_text_description">برای دریافت دستورالعمل‌های بازیابی رمز‌عبور، ایمیل تایید‌شده خود را وارد کنید.</string>
+    <string name="forgot_pw_title_email">آدرس ایمیل</string>
+    <string name="forgot_pw_hint_email">آدرس ایمیل خود را وارد کنید</string>
+    <string name="forgot_pw_btn_send">ارسال ایمیل</string>
+    <string name="forgot_pw_btn_return">بازگشت به صفحه ورود</string>
+    <string name="forgot_pw_error_timer_is_not_zero_one">لطفاً قبل از درخواست مجدد، %1$d ثانیه منتظر بمانید…</string>
+    <string name="forgot_pw_error_timer_is_not_zero_other">لطفاً قبل از درخواست مجدد، %1$d ثانیه منتظر بمانید…</string>
+    <string name="forgot_pw_error_email">آدرس ایمیل وارد شده، معتبر نیست!</string>
+    <string name="forgot_pw_error_not_found">حسابی با ایمیل وارد شده وجود ندارد.</string>
 
     <!--Forgot Password Sent Fragment-->
-    <string name="forgot_pw_sent_text_title">Check\nYour\nEmail</string>
+    <string name="forgot_pw_sent_text_title">صندوق ایمیل\nخود را\nبررسی کنید</string>
     <string name="forgot_pw_sent_text_description">Please check your inbox and click on the received link to reset your password.</string>
     <string name="forgot_pw_sent_text_resend">Didn\'t receive the link?</string>
-    <string name="forgot_pw_sent_btn_resend">Resend</string>
+    <string name="forgot_pw_sent_btn_resend">ارسال مجدد</string>
     <string name="forgot_pw_sent_text_first_time">The email has been sent.</string>
     <string name="forgot_pw_sent_text_resent">A new email has been sent.</string>
+    <string name="forgot_pw_sent_btn_return">بازگشت به صفحه ورود</string>
 
     <!--Main Activity-->
     <string name="main_menu_title_warranties">Warranty List</string>
@@ -170,11 +171,11 @@
     <string name="settings_text_settings_theme_default">System Default</string>
     <string name="settings_text_settings_theme_light">Light</string>
     <string name="settings_text_settings_theme_dark">Dark</string>
-    <string name="settings_text_settings_donate">Donate</string>
-    <string name="settings_text_settings_privacy_policy">Privacy Policy</string>
+    <string name="settings_text_settings_donate">حمایت</string>
+    <string name="settings_text_settings_privacy_policy">حریم خصوصی</string>
     <string name="settings_btn_logout">خروج</string>
     <string name="settings_dialog_message">The verification email has been successfully sent to your inbox.</string>
-    <string name="settings_dialog_positive">Confirm</string>
+    <string name="settings_dialog_positive">تایید</string>
 
     <!--Change Password Fragment-->
     <string name="change_password_text_title">Change Password</string>
@@ -185,9 +186,9 @@
     <string name="change_password_title_retype">Retype New Password</string>
     <string name="change_password_hint_retype">Retype the new password</string>
     <string name="change_password_btn_change">Change Password</string>
-    <string name="change_password_helper_password_weak">Weak</string>
+    <string name="change_password_helper_password_weak">ضعیف</string>
     <string name="change_password_helper_password_mediocre">Mediocre</string>
-    <string name="change_password_helper_password_strong">Strong</string>
+    <string name="change_password_helper_password_strong">قوی</string>
     <string name="change_password_error_password_short">Password should be at least 6 characters!</string>
     <string name="change_password_error_match">New password and retype new password do not match!</string>
     <string name="change_password_error_credentials">The provided credentials are incorrect.</string>
