--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,8 +58,8 @@
     <string name="forgot_pw_hint_email">Enter your email address</string>
     <string name="forgot_pw_btn_send">Send Email</string>
     <string name="forgot_pw_btn_return">Return To Login</string>
-    <string name="forgot_pw_error_timer_is_not_zero_one">Please wait for %1$d second before requesting again…</string>
-    <string name="forgot_pw_error_timer_is_not_zero_other">Please wait for %1$d seconds before requesting again…</string>
+    <string name="forgot_pw_error_timer_is_not_zero_one">Please wait for %d second before requesting again…</string>
+    <string name="forgot_pw_error_timer_is_not_zero_other">Please wait for %d seconds before requesting again…</string>
     <string name="forgot_pw_error_email">Email address is not valid!</string>
     <string name="forgot_pw_error_not_found">The account with the provided email does not exist.</string>
 
@@ -161,7 +161,7 @@
     <string name="settings_title_settings">Settings</string>
     <string name="settings_btn_account_verify">Verify Email</string>
     <string name="settings_btn_account_verified">Verified</string>
-    <string name="settings_text_account_change_email">Change Email</string>
+    <string name="settings_text_account_change_email">Change Email Address</string>
     <string name="settings_text_account_change_password">Change Password</string>
     <string name="settings_text_settings_language">Language</string>
     <string name="settings_text_settings_language_english">English</string>
@@ -196,7 +196,7 @@
     <string name="change_password_dialog_positive">Confirm</string>
 
     <!--Change Email Fragment-->
-    <string name="change_email_text_title">Change Email</string>
+    <string name="change_email_text_title">Change Email Address</string>
     <string name="change_email_title_password">Password</string>
     <string name="change_email_hint_password">Enter your password</string>
     <string name="change_email_title_new_email">New Email Address</string>
@@ -204,9 +204,9 @@
     <string name="change_email_btn_change">Change Email</string>
     <string name="change_email_error_new_email">New email address is not valid!</string>
     <string name="change_email_error_credentials">The provided credentials are incorrect.</string>
-    <string name="change_email_error_email_same">New email cannot be the same as your current email!</string>
+    <string name="change_email_error_email_same">New email address cannot be the same as your current email!</string>
     <string name="change_email_error_email_exists">An account with the provided email already exists.</string>
-    <string name="change_email_dialog_message">Your email has been successfully changed.</string>
+    <string name="change_email_dialog_message">Your email address has been successfully changed.</string>
     <string name="change_email_dialog_positive">Confirm</string>
 
 </resources>
